[package]
name = "spit"
version = "0.2.0"
authors = ["Andrew Yan <andrewyan333@gmail.com>"]
edition = "2018"
license = "GPL-3.0"
description = "Abbreviate frequently typed phrases"
repository = "https://github.com/Yam76/spit"
readme = "README.md"
categories = ["command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0"
structopt = "0.3"
dirs = "2.0.2"
lazy_static = "1.4.0"
